--- a/src/styles/colors.sass
+++ b/src/styles/colors.sass
@@ -1,10 +1,9 @@
-$red: red
-$red-transparent: transparentize($red, 0.16)
-$yellow: #B78B22
+$red: red;
+$red-transparent: transparentize($red, 0.16);
+$yellow: #B78B22;
 
-$black: black
-$black-transparent: transparentize($black, 0.7)
-$grey: #707070
-$brown: #444444
-$white: white
-
+$black: black;
+$black-transparent: transparentize($black, 0.7);
+$grey: #707070;
+$brown: #444444;
+$white: white;
